<resources>
    <string name="app_name">Bán vé</string>
    <string name="todo">TODO</string>
    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="register">Đăng kí?</string>
    <string name="register_text">Đăng kí</string>
    <string name="enter_phone">Nhập số điện thoại</string>
    <string name="enter_name">Nhập họ và tên</string>
    <string name="staff">Nhân viên</string>
    <string name="manager">Quản lí</string>
    <string name="enter_your_email">Nhập email</string>
    <string name="enter_your_password">Nhập mật khẩu</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="enter_your_password_new">Nhập mật khẩu mới</string>
    <string name="enter_confirm_your_password_new">Nhập lại mật khẩu mới</string>
    <string name="enter_the_password">Nhập lại mật khẩu</string>
    <string name="statistical">Thống kê</string>
    <string name="report">Báo cáo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="released">Phát hành</string>
    <string name="history">Lịch sử</string>
    <string name="scan_QR">Quét QR</string>
    <string name="logout">Đăng xuất</string>
    <string name="create_account">Tạo tài khoản</string>
    <string name="account_information">Thông tin tài khoản</string>
    <string name="sales_report">Báo cáo doanh thu</string>
    <string name="statistical_account">Thông kê tài khoản</string>
    <string name="ticket_sales_history">Lịch sử bán vé</string>
    <string name="data_reporting">Báo cáo dữ liệu</string>
    <string name="description_qrcode">Đưa mã QR vào chính giữa của camera,\ntiến trình quét mã sẽ diễn ra tự động</string>
    <string name="back">Quay lại</string>
    <string name="delete_imported_data">Xóa dữ liệu đã nhập</string>
    <string name="invoice_information">Thông tin hóa đơn</string>
    <string name="name_company">Tên công ty</string>
    <string name="address">Địa chỉ</string>
    <string name="tax_code">Mã số thuế</string>
    <string name="payments">Hình thức thanh toán</string>
    <string name="todo_bat_buoc">*</string>
    <string name="lua_chon">Lựa chọn</string>
    <string name="loai_tien">Loại tiền</string>
    <string name="vnd">VNĐ</string>
    <string name="sample">Mẫu</string>
    <string name="ngay_lap">Ngày lập</string>
    <string name="customer_information">Thông tin khách hàng</string>
    <string name="buyer_does_not_receive_invoice">Người mua không lấy hóa đơn</string>
    <string name="name_customer">Tên người mua</string>
    <string name="tax_code_customer">Mã số thuế</string>
    <string name="date_of_birth">Ngày sinh</string>
    <string name="detail">Chi tiết</string>
    <string name="Nature">Tính chất</string>
    <string name="Goods">Hàng hóa</string>
    <string name="commodity_codes">Mã hàng hóa</string>
    <string name="invoice_type">Loại hóa đơn</string>
    <string name="exsit_type_ticket">Loại vé đã tồn tại</string>
    <string name="Unit">Đơn vị tính</string>
    <string name="unit_price">Đơn giá (Bao gồm VAT)</string>
    <string name="invoice_price">Giá hóa đơn</string>
    <string name="tax">Thuế</string>
    <string name="Enter_taxes">Nhập % thuế</string>
    <string name="percent">%</string>
    <string name="quantity_per_print">Số lượng mỗi lần in</string>
    <string name="unit_price_without_VAT">Đơn giá</string>
    <string name="tax_price">Tiền thuế</string>
    <string name="Setup_QR_code">Thiết lập QR code</string>
    <string name="create_QR">Tạo mã QR</string>
    <string name="Number_of_scans_allowed">Số lần được phép quét</string>
    <string name="over_99">Số lần quét không quá 99</string>
    <string name="effective_time">Thời gian hiệu lực</string>
    <string name="time_expires">Thời gian hết hiệu lực</string>
    <string name="title_activity_bill_list">BillListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="list_invoice">Danh sách hóa đơn</string>
    <string name="create_template">Tạo Template</string>
    <string name="get_a_new_password">Lấy mật khẩu mới</string>
    <string name="close">Đóng</string>
    <string name="change_passwords">Đổi mật khẩu</string>
    <string name="lost_time_current">Thời gian hiệu lực không được nhỏ hơn thờ gian hiện tại</string>
    <string name="email">Email</string>
    <string name="phone_number">Số điện thoại</string>

</resources>