<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Register.RegisterActivity">

    <ImageView
        android:id="@+id/iv_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_horizontal|center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="32sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/enter_name"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:drawableLeftCompat="@drawable/ic_person"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_name_reg"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_four_border"
                android:drawablePadding="16dp"
                android:inputType="textEmailAddress"
                android:maxLength="500"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/enter_phone"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:drawableLeftCompat="@drawable/ic_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_edt_name" />

            <EditText
                android:id="@+id/edt_phone_reg"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_four_border"
                android:drawablePadding="16dp"
                android:inputType="textEmailAddress"
                android:maxLength="500"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/enter_your_email"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:drawableLeftCompat="@drawable/ic_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_edt_phone" />

            <EditText
                android:id="@+id/edt_email_reg"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_four_border"
                android:drawablePadding="16dp"
                android:inputType="textEmailAddress"
                android:maxLength="500"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/enter_your_password"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:drawableLeftCompat="@drawable/ic_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_email_reg" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="none"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/color_A1A8B0">

                    <EditText
                        android:id="@+id/edt_password_reg"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/border"
                        android:freezesText="true"
                        android:inputType="textPassword"
                        android:paddingStart="8dp"
                        android:paddingRight="36dp"
                        android:textSize="16sp"
                        app:passwordToggleEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/reg_img_clear_pass"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="56dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/close_x"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:text="@string/enter_the_password"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:drawableLeftCompat="@drawable/ic_password"
                app:layout_constraintStart_toStartOf="parent" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="none"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/color_A1A8B0">

                    <EditText
                        android:id="@+id/edt_confirm_password_reg"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/border"
                        android:freezesText="true"
                        android:inputType="textPassword"
                        android:paddingStart="8dp"
                        android:paddingRight="36dp"
                        android:textSize="16sp"
                        app:passwordToggleEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/reg_img_clear_confirm_pass"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="56dp"
                    android:layout_marginBottom="12dp"
                    android:src="@drawable/close_x"
                    android:visibility="gone" />

            </RelativeLayout>

            <RadioGroup
                android:id="@+id/rg_choose_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:checkedButton="@+id/rb_staff"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password">

                <CheckBox
                    android:id="@+id/chkadmin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#70AFA9"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/manager"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/chkuser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#70AFA9"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/staff"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/register_text"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
