<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.bill_list.BillListActivity">

    <TextView
        android:id="@+id/title_bill_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/list_invoice"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_bill_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/title_bill_list"
        app:layout_constraintBottom_toTopOf="@+id/ll_footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:drawableLeft="@drawable/ic_back_v2"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_template"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:drawableLeft="@drawable/ic_create"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/create_template"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>