<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.userfragment.accountfragment.AccountUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/header_title_account_fragment_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_information"
            android:background="@color/blue"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phiên bản"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/header_title_account_fragment_user"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/tv_email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_bold"
            android:text="Email đăng nhập"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/bg_btn"
                android:id="@+id/btn_change_password_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_passwords"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_margin="8dp"
                android:background="@drawable/bg_btn"
                android:id="@+id/btn_logout_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>